# HIPRT

./: CMakeLists.txt
cmake/: utils.cmake
